# rust_gui_nmea_player

./: Cargo.toml  README.md
.debug/: .rustc_info.json
.debug/debug/: hello_world.d
.debug/debug/.fingerprint/anstream-d06e153d98754d6d/: lib-anstream  lib-anstream.json
.debug/debug/.fingerprint/anstyle-0f28db99255daaed/: lib-anstyle  lib-anstyle.json
.debug/debug/.fingerprint/anstyle-parse-0b38fa4657e14e87/: lib-anstyle-parse  lib-anstyle-parse.json
.debug/debug/.fingerprint/anstyle-query-ba266b268dad5ec6/: lib-anstyle-query  lib-anstyle-query.json
.debug/debug/.fingerprint/clap-590412ebd6173f61/: lib-clap  lib-clap.json
.debug/debug/.fingerprint/clap_builder-2b40884812c73c49/: lib-clap_builder  lib-clap_builder.json
.debug/debug/.fingerprint/clap_derive-2dd68493b9ad8dd3/: lib-clap_derive  lib-clap_derive.json
.debug/debug/.fingerprint/clap_lex-0d8805caa5a16827/: lib-clap_lex  lib-clap_lex.json
.debug/debug/.fingerprint/colorchoice-d1d2268b7b7916f1/: lib-colorchoice  lib-colorchoice.json
.debug/debug/.fingerprint/heck-b6864d1dcdef4688/: lib-heck  lib-heck.json
.debug/debug/.fingerprint/hello_world-764608a2d4993a42/: bin-hello_world  bin-hello_world.json  dep-bin-hello_world
.debug/debug/.fingerprint/proc-macro2-26bed48501fc94db/: build-script-build-script-build  build-script-build-script-build.json
.debug/debug/.fingerprint/proc-macro2-d1ac8b00dd0a0730/: lib-proc-macro2  lib-proc-macro2.json
.debug/debug/.fingerprint/proc-macro2-fe921100496653cf/: run-build-script-build-script-build  run-build-script-build-script-build.json
.debug/debug/.fingerprint/quote-4aa97b42343660b9/: lib-quote  lib-quote.json
src/: main.rs  my.rs  udp_broadcaster_thread.rs  where_am_i.rs
(+8 files in other folders)
