[package]
name = "rust_nmea_player"
version = "0.1.0"
edition = "2021"
authors = ["Tony Mattheys"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pnet = "0.30.0"
eframe = "0.25.0"
egui = "0.25.0"
env_logger = { version = "0.10.1", default-features = false, features = [
    "auto-color",
    "humantime",
] }
egui_extras = { version = "0.25.0", features = ["all_loaders"] }
image = { version = "0.24.7", features = ["jpeg", "png"] }
log = "0.4.20"
